--- a/readme.org
+++ b/readme.org
@@ -1,16 +1,15 @@
 #+title: draw-tree
   
-draw-tree
+draw-tree.el
 
-Print a tree structure resembling an Emacs Lisp datum. Each cons cell
-is represented by [o|o] with lines leading to their car and cdr
-parts. Conses with a cdr value of () are represented by [o|/].
+Draw tree structure of cons cells.
 
 Ported to Emacs Lisp from Nils M Holm's Scheme 9 from Empty Space's
 Function Library (http://www.t3x.org/s9fes/draw-tree.scm.html) and its
 Common Lisp port written by CBaggers
 (https://github.com/cbaggers/draw-cons-tree).
 
+Giulio Pietroiusti, 2022
 Placed in the Public Domain.
 
 Example:
@@ -30,5 +29,6 @@ Example:
 #+end_src
 
 See also:
-- [[https://github.com/zainab-ali/pair-tree.el][pair-tree.el]]
+- [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Box-Diagrams.html][GNU Emacs Manual, Drawing Lists as Box Diagrams]]
 - [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-15.html#%_sec_2.2][SICP, box-and-pointer notation]]
+- [[https://github.com/zainab-ali/pair-tree.el][pair-tree.el]]
